--- a/courses/style.css
+++ b/courses/style.css
@@ -21,9 +21,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif }
   margin-bottom: 12px;
 }
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #0b0b0c;
   color: white;
-  padding: 15px;
+  padding: 8px;
   width: 100px;
   font-size: 16px;
   border: none;
@@ -31,7 +31,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif }
 }
 
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #263a4e;
 }
 
 .dropdown {
